# 12factor

./: AGENTS.md  config.toml  development.md  hooks.json  hooks.md  logging.md  loop.md  memory.md  pyproject.toml  rules.md  sandbox.md  subagents.md
docs/: architecture.md
